# executive_report

./: .gitignore  README.md  pyproject.toml
executive_report/: hooks.py  install.py  modules.txt
executive_report/config/: desktop.py  executive_report.py
executive_report/executive_report/: api.py  email.py  permissions.py
executive_report/executive_report/doctype/executive_report_recipient/: executive_report_recipient.json  executive_report_recipient.py
executive_report/executive_report/doctype/executive_report_settings/: executive_report_settings.js  executive_report_settings.json  executive_report_settings.py
executive_report/executive_report/page/executive_dashboard/: executive_dashboard.js  executive_dashboard.json
executive_report/fixtures/: role.json
executive_report/public/css/: executive_report.css
